--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ lang: ja
 title: YABUKI Taro's Home Page
 author: YABUKI Taro
 email: taro.yabuki at unfindable dot net
-description: RSSのURLが変わりました。新しいURLは https://taroyabuki.github.io/feed.xml です。（2018/08/19）
+description: RSSのURLが変わりました。（2018/08/19）
 github_username: taroyabuki
 twitter_username: yabuki
 facebook_username: taro.yabuki
