WordPressからJekyllへの移行手順

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ lang: ja
 title: YABUKI Taro's Home Page
 author: YABUKI Taro
 email: taro.yabuki at unfindable dot net
-description: RSSのURLが変わりました。（2018/08/19）
+description: 2018/08/19 フィードのURLが変わりました。
 github_username: taroyabuki
 twitter_username: yabuki
 facebook_username: taro.yabuki
