コンピュータでとく数学

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ lang: ja
 title: Yabuki Taro's Home Page
 author: Yabuki Taro
 email: taro.yabuki at unfindable dot net
-description: 2018/08/19 フィードのURLが変わりました。
+description: 2024/03 更新
 github_username: taroyabuki
 twitter_username: yabuki
 facebook_username: taro.yabuki
